Wed 13 Oct 2004 12:29:13 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added missing 'checked' function for RadioButton 
	o added @String.findRev function for searching string backwards

Tue 12 Oct 2004 14:00:03 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: don't add brackets to functions with no parameters 

Mon 11 Oct 2004 14:00:03 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o improved 'cancel'

Sat 09 Oct 2004 14:00:03 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: bug in @File.append
	o In Function Browser show common widget functions for each widget
	o scroll content when process output is longer; show hourglass 
	  in Konsole widget when process is running
	o added new command 'cancel' to cancel script running in Konsole

Tue 05 Oct 2004 11:19:41 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: use "\n" as separator in multiselection mode of FileSelector
	o preliminary version of Konsole widget

Sat 02 Oct 2004 20:38:40 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added 'execute' command to ScriptObject widget
	o fix: properly report failure when saving file and ask to 
 	  provide another file name

Fri 01 Oct 2004 22:26:06 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: output was not sent to stdout by ExecButton

Sat 28 Aug 2004 19:20:06 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fixed a crash in TreeWidget setText function
	o added support for multiselection in ListBox (via selection
	  function)

Tue 24 Aug 2004 11:00:16 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o Function Browser: don't show unnecessary 'widget' parameter
	o Function Browser: make widget functions default
	o Kommander Text Editor: focus on script text
	o re-add new i18n descriptions for some new functions
	o added new 'checked' function for checkboxes and buttonboxes
	o bool values returned from DCOP calls are now supported

Wed 18 Jul 2004 18:19:21 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o Kommander 1.0 released together with KDE 3.3	
