@@ -26,6 +26,7 @@
 #include "textbrowser.h"
 #include "textedit.h"
 #include "textedit.h"
+#include "timer.h"
 #include "treewidget.h"
 #include "wizard.h"
 
@@ -59,6 +60,7 @@ KomStdPlugin::KomStdPlugin()
   addWidget("TabWidget", group, "");
   // addWidget("SubDialog", group, "");
   addWidget("ListBox", group, "");
+  addWidget("Timer", group, "");
   addWidget("ScriptObject", group, "");
   addWidget("RichTextEditor", group, "");
   addWidget("TreeWidget", group, "");
@@ -69,59 +71,34 @@ KomStdPlugin::KomStdPlugin()
 
 QWidget *KomStdPlugin::create( const QString &key, QWidget *parent, const char *name )
 {
-  if (key == "Label")
-    return new Label(parent, name);
-  else if (key == "PixmapLabel")
-    return new PixmapLabel(parent, name);
-  else if (key == "LineEdit")
-    return new LineEdit(parent, name);
-  else if (key == "Dialog")
-    return new Dialog(parent, name);
-  else if (key == "Wizard")
-    return new Wizard(parent, name);
-  else if (key == "TabWidget")
-    return new TabWidget(parent, name);
-  else if (key == "ExecButton")
-    return new ExecButton(parent, name);
-  else if (key == "CloseButton")
-    return new CloseButton(parent, name);
-  else if (key == "SubDialog")
-    return new SubDialog(parent, name);
-  else if (key == "FileSelector")
-    return new FileSelector(parent, name);
-  else if (key == "TextEdit")
-    return new TextEdit(parent, name);
-  else if (key == "TextBrowser")
-    return new TextBrowser(parent, name);
-  else if (key == "RadioButton")
-    return new RadioButton(parent, name);
-  else if (key == "ButtonGroup")
-    return new ButtonGroup(parent, name);
-  else if (key == "GroupBox")
-    return new GroupBox(parent, name);
-  else if (key == "CheckBox")
-    return new CheckBox(parent, name);
-  else if (key == "ComboBox")
-    return new ComboBox(parent, name);
-  else if (key == "SpinBoxInt")
-    return new SpinBoxInt(parent, name);
-  else if (key == "ListBox")
-    return new ListBox(parent, name);
-  else if (key == "ScriptObject")
-    return new ScriptObject(parent, name);
-  else if (key == "RichTextEditor")
-    return new RichTextEditor(parent, name);
-  else if (key == "TreeWidget")
-    return new TreeWidget(parent, name);
-  else if (key == "StatusBar")
-    return new StatusBar(parent, name);
-  else if (key == "ProgressBar")
-    return new ProgressBar(parent, name);
-  else if (key == "Slider")
-    return new Slider(parent, name);
-  else if (key == "Konsole")
-    return new Konsole(parent, name);
-  return 0;
+  if (key == "ButtonGroup") return new ButtonGroup(parent, name);
+  else if (key == "CheckBox") return new CheckBox(parent, name);
+  else if (key == "CloseButton") return new CloseButton(parent, name);
+  else if (key == "ComboBox") return new ComboBox(parent, name);
+  else if (key == "Dialog") return new Dialog(parent, name);
+  else if (key == "ExecButton") return new ExecButton(parent, name);
+  else if (key == "FileSelector") return new FileSelector(parent, name);
+  else if (key == "GroupBox") return new GroupBox(parent, name);
+  else if (key == "Konsole") return new Konsole(parent, name);
+  else if (key == "Label") return new Label(parent, name);
+  else if (key == "LineEdit") return new LineEdit(parent, name);
+  else if (key == "ListBox") return new ListBox(parent, name);
+  else if (key == "PixmapLabel") return new PixmapLabel(parent, name);
+  else if (key == "ProgressBar") return new ProgressBar(parent, name);
+  else if (key == "RadioButton") return new RadioButton(parent, name);
+  else if (key == "RichTextEditor") return new RichTextEditor(parent, name);
+  else if (key == "ScriptObject") return new ScriptObject(parent, name);
+  else if (key == "Slider") return new Slider(parent, name);
+  else if (key == "SpinBoxInt") return new SpinBoxInt(parent, name);
+  else if (key == "StatusBar") return new StatusBar(parent, name);
+  else if (key == "SubDialog") return new SubDialog(parent, name);
+  else if (key == "TabWidget") return new TabWidget(parent, name);
+  else if (key == "TextBrowser") return new TextBrowser(parent, name);
+  else if (key == "TextEdit") return new TextEdit(parent, name);
+  else if (key == "Timer") return new Timer(parent, name);
+  else if (key == "TreeWidget") return new TreeWidget(parent, name);
+  else if (key == "Wizard") return new Wizard(parent, name);
+  else return 0;
 }
 
 KOMMANDER_EXPORT_PLUGIN(KomStdPlugin)
